[package]
name = "microbit-bsp"
version = "0.4.0"
edition = "2021"
description = "An embassy-based boards support package (BSP) for BBC Micro:bit v2"
license = "MIT OR Apache-2.0"
keywords = ["embedded", "async", "nordic", "nrf", "microbit"]
categories = ["embedded", "hardware-support", "no-std", "asynchronous"]
repository = "https://github.com/lulf/microbit-bsp"
rust-version = "1.83"

[dependencies]
embassy-nrf = { version = "0.3.1", features = [
    "gpiote",
    "nfc-pins-as-gpio",
    "nrf52833",
    "time-driver-rtc1",
    "time",
] }
embassy-time = { version = "0.4", default-features = false }
embassy-sync = { version = "0.7.0" }
cortex-m = { version = "0.7.6" }
embedded-hal = "1.0"
lsm303agr = { version = "1.1.0", features = ["async"] }
futures = { version = "0.3", default-features = false }

defmt = { version = "^1.0.1", optional = true }
heapless = "0.8.0"

# trouble bluetooth dependencies
nrf-sdc = { version = "0.1.0", default-features = false, features = [
    "defmt",
    "peripheral",
    "nrf52833",
], optional = true }
nrf-mpsl = { version = "0.1.0", default-features = false, features = [
    "defmt",
    "critical-section-impl",
], optional = true }
static_cell = "2"

[features]
default = ["defmt"]
defmt = [
    "dep:defmt",
    "embassy-nrf/defmt",
    "heapless/defmt-03",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
]
trouble = [
    "embassy-nrf/unstable-pac",
    "embassy-nrf/rt",
    "nrf-sdc",
    "nrf-mpsl",
]

[patch.crates-io]
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", rev="7be9b853e15ca0404d65c623d1ec5795fd96c204" }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", rev="7be9b853e15ca0404d65c623d1ec5795fd96c204" }

embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
