[workspace]
members = [
    "display",
    "ble",
]

[patch.crates-io]
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", branch = "master" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", branch = "master" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", branch = "master" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", branch = "master" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", branch = "master" }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "e434d9526f4b7aa1728f7911444b34e06edbfdf7" }
nrf-softdevice-s113 = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "e434d9526f4b7aa1728f7911444b34e06edbfdf7" }
