[package]
name = "microbit-async"
version = "0.1.0"
edition = "2021"
description = "An embassy-based boards support package (BSP) for BBC Micro:bit v2"

[dependencies]
embassy-nrf = { version = "0.1.0", default-features = false, features = ["nrf52833", "gpiote", "time-driver-rtc1", "nightly", "unstable-traits"]}
embassy-executor = { version = "0.1.0", default-features = false, features = ["time"] }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
embedded-hal = "1.0.0-alpha.8"
lsm303agr = "0.2.2"

[dev-dependencies]
embassy-executor = { version = "0.1.0", default-features = false, features = ["time", "defmt-timestamp-uptime", "defmt", "nightly"] }
defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m-rt = "0.7.0"
cortex-m = "0.7.3"

[patch.crates-io]
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", branch = "master" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", branch = "master" }
