[package]
name = "microbit-async"
version = "0.1.0"
edition = "2021"
description = "An embassy-based boards support package (BSP) for BBC Micro:bit v2"

[dependencies]
embassy-nrf = { version = "0.1.0", default-features = false, features = ["nrf52833", "gpiote", "time-driver-rtc1", "nightly", "unstable-traits", "nfc-pins-as-gpio"]}
embassy-time = { version = "0.1.0", default-features = false }

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
embedded-hal = "1.0.0-alpha.8"
lsm303agr = "0.2.2"
defmt = "0.3"

[patch.crates-io]
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", branch = "master" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", branch = "master" }