[package]
name = "microbit-async-ble-example"
version = "0.1.0"
edition = "2021"

[dependencies]
microbit-bsp = { path = "../../" }

embassy-futures = { version = "0.1.1", default-features = false }
embassy-executor = { version = "0.9", default-features = false, features = [
    "arch-cortex-m",
    "defmt",
    "executor-thread"
] }

nrf-softdevice = { version = "0.1.0", features = ["ble-peripheral", "ble-gatt-server", "s113", "nrf52833", "critical-section-impl", "defmt"] }
nrf-softdevice-s113 = { version = "0.1.2" }

heapless = "0.8"
cortex-m-rt = "0.7"
static_cell = "2"

defmt = "1.0.1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

[profile.release]
debug = 2

[patch.crates-io]
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "a9206dd36f713c7b3a10468245fe1927b653ccc6" }
nrf-softdevice-s113 = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "a9206dd36f713c7b3a10468245fe1927b653ccc6" }
