[package]
name = "microbit-async-ble-example"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
microbit-bsp= { path = "../../" }

embassy-futures = { version = "0.1", default-features = false }
embassy-executor = { version = "0.5", default-features = false, features = ["integrated-timers", "defmt", "arch-cortex-m", "executor-thread", "task-arena-size-32768"] }
embassy-time = { version = "0.3", default-features = false, features = ["defmt-timestamp-uptime"] }

nrf-softdevice = { version = "0.1.0", features = ["ble-peripheral", "ble-gatt-server", "s113", "nrf52833", "critical-section-impl", "defmt"] }
nrf-softdevice-s113 = { version = "0.1.0" }

heapless = "0.7"
cortex-m-rt = "0.7"
static_cell = "1"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
