[package]
name = "embassy-microbit-bt-mesh-example"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-microbit = { path = "../../microbit" }

embassy-nrf = { version = "0.1.0", default-features = false, features = ["nrf52833", "gpiote", "time-driver-rtc1", "nightly", "unstable-traits"]}
embassy-util = { version = "0.1.0", default-features = false }
embassy-executor = { version = "0.1.0", default-features = false, features = ["time", "defmt-timestamp-uptime", "defmt", "nightly"] }

nrf-softdevice = { version = "0.1.0", features = ["ble-peripheral", "ble-central", "ble-gatt-server", "s140", "nrf52833", "critical-section-impl", "defmt" ] }
nrf-softdevice-s140 = { version = "0.1.0" }

heapless = "0.7"
cortex-m-rt = "0.7"

defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
