[package]
name = "microbit-async-display-example"
version = "0.1.0"
edition = "2021"

[dependencies]
microbit-async = { path = "../../microbit" }

embassy-nrf = { version = "0.1.0", default-features = false, features = ["nrf52833", "gpiote", "time-driver-rtc1", "nightly", "unstable-traits"]}
embassy-util = { version = "0.1.0", default-features = false }
embassy-executor = { version = "0.1.0", default-features = false, features = ["time", "defmt-timestamp-uptime", "defmt", "nightly"] }

cortex-m-rt = "0.7"

defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
