[package]
name = "microbit-async-display-example"
version = "0.1.0"
edition = "2021"

[dependencies]
microbit-bsp = { path = "../../" }

embassy-futures = { version = "0.1", default-features = false }
embassy-executor = { version = "0.7.0", default-features = false, features = [
    "arch-cortex-m", 
    "defmt", 
    "executor-interrupt", 
    "executor-thread", 
    "task-arena-size-32768"
    ] }
embassy-time = { version = "0.4.0", default-features = false, features = ["defmt-timestamp-uptime", "defmt"] }

cortex-m-rt = "0.7"

cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
defmt = "1.0.1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

[profile.release]
debug = 2
