[package]
name = "trouble-ble-example"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
embassy-executor = { version = "0.7", default-features = false, features = [
    "arch-cortex-m", 
    "defmt", 
    "executor-interrupt", 
    "executor-thread", 
    "task-arena-size-32768"
    ] }
embassy-time = { version = "0.4", default-features = false, features = ["defmt", "defmt-timestamp-uptime"] }
embassy-futures = "0.1.1"
embassy-sync = { version = "0.6", features = ["defmt"] }
microbit-bsp = { path = "../../", features = ["trouble"]}

futures = { version = "0.3", default-features = false, features = ["async-await"]}
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", features = [
    "defmt",
], rev = "770b1e801c0a06ba51a4eb9b9f5a393726f32f33"}

defmt = "0.3.10"
defmt-rtt = "0.4.0"

cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.5"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "2"

[profile.release]
debug = 2